# AnalyzeMFT-cpp

./: CMakeLists.txt  README.md  TODO.md
docs/MFT/: MFT_Concepts.md
include/: canalyzemft.h  version.h
include/analyzeMFT/cli/: app.h  cliParser.h
include/analyzeMFT/core/: constants.h  mftAnalyzer.h  mftRecord.h  winTime.h
include/analyzeMFT/parsers/: attributeParser.h  bitmapParser.h  dataParser.h  filenameParser.h  indexParser.h  mftAttributeValidator.h  objectidParser.h  reparsepointParser.h  secdescParser.h  standardinfoParser.h  validationHelpers.h  volumeParser.h  xattrParser.h
include/analyzeMFT/utils/: fsUtils.h  hashCalc.h  logger.h  memUtils.h  stringUtils.h
include/analyzeMFT/writers/: bodyWriter.h  csvWriter.h  excelWriter.h  fileWriter.h  jsonWriter.h  sqliteWriter.h  xmlWriter.h
src/: main.cpp
src/cli/: app.cpp  cliParser.cpp
src/core/: canalyzemft.cpp  mftAnalyzer.cpp  mftRecord.cpp  winTime.cpp
src/parsers/: attributeParser.cpp  bitmapParser.cpp  dataParser.cpp  filenameParser.cpp  indexParser.cpp  mftAttributeValidator.cpp  objectidParser.cpp  reparsepointParser.cpp  secdescParser.cpp  standardinfoParser.cpp  validationHelpers.cpp  volumeParser.cpp  xattrParser.cpp
src/utils/: fsUtils.cpp  hashCalc.cpp  logger.cpp  memUtils.cpp  stringUtils.cpp
src/writers/: bodyWriter.cpp  csvWriter.cpp  excelWriter.cpp  fileWriter.cpp  jsonWriter.cpp  sqliteWriter.cpp  timelineWriter.cpp  xmlWriter.cpp
tests/: CMakeLists.txt
